--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/NoActionBarTheme">
-        <activity android:name="com.example.aicamera.MainActivity">
+        <activity android:name="com.example.aicamera.CameraActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
